Fix tinymce toolbar wrapping on chrome

--- a/plumi/content/browser/stylesheets/publish.css
+++ b/plumi/content/browser/stylesheets/publish.css
@@ -120,3 +120,7 @@ div.controls {
 #fieldset-contentlicensing div.ArchetypesSelectionWidget.field {
     display: block;
 }
+
+.ploneSkin table.mceToolbar {
+clear: left;
+}
